Laboratory Settings - defualt - msg content

--- a/erpnext/medical/doctype/laboratory_settings/laboratory_settings.json
+++ b/erpnext/medical/doctype/laboratory_settings/laboratory_settings.json
@@ -246,6 +246,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
+   "default": "Hello {{doc.patient}}, Your {{doc.test_name}} result is ready with {{doc.company }}. \nThank You, Good day!", 
    "fieldname": "sms_printed", 
    "fieldtype": "Long Text", 
    "hidden": 0, 
@@ -303,6 +304,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
+   "default": "Hello {{doc.patient}}, Your {{doc.test_name}} result has been emailed to {{doc.email}}. \n{{doc.company }}. \nThank You, Good day!", 
    "fieldname": "sms_emailed", 
    "fieldtype": "Long Text", 
    "hidden": 0, 
