--- a/erpnext/healthcare/doctype/healthcare_settings/healthcare_settings.json
+++ b/erpnext/healthcare/doctype/healthcare_settings/healthcare_settings.json
@@ -141,7 +141,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "fieldname": "default_medical_code", 
+   "fieldname": "default_medical_code_standard", 
    "fieldtype": "Link", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
@@ -150,10 +150,10 @@
    "in_global_search": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Default Medical Code", 
+   "label": "Default Medical Code Standard", 
    "length": 0, 
    "no_copy": 0, 
-   "options": "Medical Code", 
+   "options": "Medical Code Standard", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -1063,7 +1063,7 @@
  "issingle": 1, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-06-22 13:33:35.463988", 
+ "modified": "2017-06-22 15:51:21.860802", 
  "modified_by": "Administrator", 
  "module": "Healthcare", 
  "name": "Healthcare Settings", 
