Set Physician Role insted of IP Physician and OP Physician Role

--- a/erpnext/healthcare/doctype/appointment_type/appointment_type.json
+++ b/erpnext/healthcare/doctype/appointment_type/appointment_type.json
@@ -121,7 +121,7 @@
    "print": 1,
    "read": 1,
    "report": 1,
-   "role": "OP Physician",
+   "role": "Physician",
    "set_user_permissions": 0,
    "share": 1,
    "submit": 0,
