--- a/erpnext/healthcare/page/appointment_analytic/appointment_analytic.json
+++ b/erpnext/healthcare/page/appointment_analytic/appointment_analytic.json
@@ -12,7 +12,7 @@
  "page_name": "Appointment Analytics",
  "roles": [
   {
-   "role": "OP Physician"
+   "role": "Physician"
   }
  ],
  "script": null,
