Healthcare Settings - add Role - Medical Administrator

--- a/erpnext/healthcare/doctype/healthcare_settings/healthcare_settings.json
+++ b/erpnext/healthcare/doctype/healthcare_settings/healthcare_settings.json
@@ -1063,7 +1063,7 @@
  "issingle": 1, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-06-22 15:51:21.860802", 
+ "modified": "2017-07-06 12:49:09.475643", 
  "modified_by": "Administrator", 
  "module": "Healthcare", 
  "name": "Healthcare Settings", 
@@ -1084,7 +1084,7 @@
    "print": 1, 
    "read": 1, 
    "report": 0, 
-   "role": "System Manager", 
+   "role": "Medical Administrator", 
    "set_user_permissions": 0, 
    "share": 1, 
    "submit": 0, 
