[hub] fix flags, update on client save working

--- a/erpnext/hub_node/doctype/hub_settings/hub_settings.json
+++ b/erpnext/hub_node/doctype/hub_settings/hub_settings.json
@@ -508,7 +508,7 @@
    "allow_bulk_edit": 0, 
    "allow_on_submit": 0, 
    "bold": 0, 
-   "collapsible": 0, 
+   "collapsible": 1, 
    "columns": 0, 
    "depends_on": "eval:(doc.publish && doc.enabled)", 
    "fieldname": "seller_profile_section", 
@@ -661,7 +661,7 @@
    "collapsible": 0, 
    "columns": 0, 
    "depends_on": "publish", 
-   "fieldname": "log_section", 
+   "fieldname": "logs_section", 
    "fieldtype": "Section Break", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
@@ -670,7 +670,7 @@
    "in_global_search": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Log", 
+   "label": "Logs", 
    "length": 0, 
    "no_copy": 0, 
    "permlevel": 0, 
@@ -739,7 +739,7 @@
    "precision": "", 
    "print_hide": 0, 
    "print_hide_if_no_value": 0, 
-   "read_only": 1, 
+   "read_only": 0, 
    "remember_last_selected_value": 0, 
    "report_hide": 0, 
    "reqd": 0, 
@@ -882,7 +882,7 @@
  "issingle": 1, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-08-19 16:58:08.159748", 
+ "modified": "2017-08-20 04:36:46.799071", 
  "modified_by": "Administrator", 
  "module": "Hub Node", 
  "name": "Hub Settings", 
