--- a/erpnext/healthcare/doctype/healthcare_settings/healthcare_settings.json
+++ b/erpnext/healthcare/doctype/healthcare_settings/healthcare_settings.json
@@ -210,7 +210,7 @@
    "in_global_search": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Collect Fee for Register Patient", 
+   "label": "Collect Fee for Patient Registration", 
    "length": 0, 
    "no_copy": 0, 
    "permlevel": 0, 
@@ -1063,7 +1063,7 @@
  "issingle": 1, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-07-12 14:25:09.312449", 
+ "modified": "2017-08-22 11:30:15.865295", 
  "modified_by": "Administrator", 
  "module": "Healthcare", 
  "name": "Healthcare Settings", 
