--- a/erpnext/healthcare/doctype/healthcare_settings/healthcare_settings.json
+++ b/erpnext/healthcare/doctype/healthcare_settings/healthcare_settings.json
@@ -1063,7 +1063,7 @@
  "issingle": 1, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-08-22 11:30:15.865295", 
+ "modified": "2017-08-22 14:33:12.931955", 
  "modified_by": "Administrator", 
  "module": "Healthcare", 
  "name": "Healthcare Settings", 
@@ -1084,7 +1084,7 @@
    "print": 1, 
    "read": 1, 
    "report": 0, 
-   "role": "Medical Administrator", 
+   "role": "Healthcare Administrator", 
    "set_user_permissions": 0, 
    "share": 1, 
    "submit": 0, 
