--- a/erpnext/healthcare/doctype/patient_appointment/patient_appointment.json
+++ b/erpnext/healthcare/doctype/patient_appointment/patient_appointment.json
@@ -785,7 +785,7 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-07-12 14:35:00.148643", 
+ "modified": "2017-08-22 14:34:48.044789", 
  "modified_by": "Administrator", 
  "module": "Healthcare", 
  "name": "Patient Appointment", 
@@ -806,7 +806,7 @@
    "print": 1, 
    "read": 1, 
    "report": 1, 
-   "role": "Medical Administrator", 
+   "role": "Healthcare Administrator", 
    "set_user_permissions": 0, 
    "share": 1, 
    "submit": 0, 
