sync dynamic item fields daily

--- a/erpnext/hub_node/doctype/hub_settings/hub_settings.json
+++ b/erpnext/hub_node/doctype/hub_settings/hub_settings.json
@@ -540,7 +540,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "depends_on": "publish", 
+   "depends_on": "enabled", 
    "fieldname": "logs_section", 
    "fieldtype": "Section Break", 
    "hidden": 0, 
@@ -571,6 +571,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
+   "depends_on": "enabled", 
    "fieldname": "access_token", 
    "fieldtype": "Read Only", 
    "hidden": 0, 
@@ -634,7 +635,7 @@
    "depends_on": "publish", 
    "fieldname": "last_sync_datetime", 
    "fieldtype": "Datetime", 
-   "hidden": 1, 
+   "hidden": 0, 
    "ignore_user_permissions": 0, 
    "ignore_xss_filter": 0, 
    "in_filter": 0, 
@@ -791,7 +792,7 @@
  "issingle": 1, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-08-24 01:10:58.578103", 
+ "modified": "2017-08-24 07:59:52.195325", 
  "modified_by": "Administrator", 
  "module": "Hub Node", 
  "name": "Hub Settings", 
