Add online, offline option, fix search

--- a/erpnext/accounts/doctype/pos_settings/pos_settings.json
+++ b/erpnext/accounts/doctype/pos_settings/pos_settings.json
@@ -18,8 +18,9 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "fieldname": "type_of_pos", 
-   "fieldtype": "Select", 
+   "default": "0", 
+   "fieldname": "is_online", 
+   "fieldtype": "Check", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
    "ignore_xss_filter": 0, 
@@ -27,10 +28,10 @@
    "in_global_search": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Type of POS", 
+   "label": "Online", 
    "length": 0, 
    "no_copy": 0, 
-   "options": "Online\nOffline", 
+   "options": "", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -54,7 +55,7 @@
  "issingle": 1, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-08-28 16:46:41.732676", 
+ "modified": "2017-08-29 14:34:36.166049", 
  "modified_by": "Administrator", 
  "module": "Accounts", 
  "name": "POS Settings", 
