rename Is Online field to Use POS in Offline Mode in pos settings

--- a/erpnext/accounts/doctype/pos_settings/pos_settings.json
+++ b/erpnext/accounts/doctype/pos_settings/pos_settings.json
@@ -18,8 +18,8 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "default": "1", 
-   "fieldname": "is_online", 
+   "default": "0", 
+   "fieldname": "use_pos_in_offline_mode", 
    "fieldtype": "Check", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
@@ -28,10 +28,9 @@
    "in_global_search": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Online", 
+   "label": "Use POS in Offline Mode", 
    "length": 0, 
    "no_copy": 0, 
-   "options": "", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -55,7 +54,7 @@
  "issingle": 1, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-08-30 18:34:58.960276", 
+ "modified": "2017-09-11 12:51:02.422679", 
  "modified_by": "Administrator", 
  "module": "Accounts", 
  "name": "POS Settings", 
