modify doctype structures

--- a/erpnext/accounts/doctype/bank_statement_mapping_item/bank_statement_mapping_item.json
+++ b/erpnext/accounts/doctype/bank_statement_mapping_item/bank_statement_mapping_item.json
@@ -79,13 +79,13 @@
    "collapsible": 0, 
    "columns": 0, 
    "fieldname": "transformation_rule", 
-   "fieldtype": "Data", 
+   "fieldtype": "Code", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
    "ignore_xss_filter": 0, 
    "in_filter": 0, 
    "in_global_search": 0, 
-   "in_list_view": 0, 
+   "in_list_view": 1, 
    "in_standard_filter": 0, 
    "label": "Transformation Rule", 
    "length": 0, 
@@ -120,6 +120,7 @@
    "label": "Target Field", 
    "length": 0, 
    "no_copy": 0, 
+   "options": "\nTransaction Date\nValue Date\nDebit Amount\nCredit Amount\nTransaction Description\nBalance\nTransaction Type\nStatus", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -143,7 +144,7 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-09-19 14:31:52.495371", 
+ "modified": "2017-09-20 20:21:18.515291", 
  "modified_by": "Administrator", 
  "module": "Accounts", 
  "name": "Bank Statement Mapping Item", 
