Updates by Chude

--- a/erpnext/accounts/doctype/bank_statement_mapping_item/bank_statement_mapping_item.json
+++ b/erpnext/accounts/doctype/bank_statement_mapping_item/bank_statement_mapping_item.json
@@ -205,8 +205,8 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-10-12 14:01:24.836415", 
- "modified_by": "Administrator", 
+ "modified": "2017-10-13 01:54:24.832262", 
+ "modified_by": "chude.osiegbu@manqala.com", 
  "module": "Accounts", 
  "name": "Bank Statement Mapping Item", 
  "name_case": "", 
